--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "isbot": "^3.5.0"
   }
 }
