--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "isbot": "^3.5.0"
+    "isbot": "^3.5.0",
+    "mongoose": "^6.3.6"
   }
 }
