--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
