--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "regenerator-runtime": "^0.13.9"
   },
   "dependencies": {
+    "aws-sdk": "^2.1158.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
