--- a/packages/app/Dockerfile
+++ b/packages/app/Dockerfile
@@ -1,21 +1,45 @@
-# Install deps & build 
-FROM node:18-alpine AS builder
-ENV NODE_ENV=production
-WORKDIR /app
+# Install dependencies
+FROM node:16-alpine AS deps
 RUN apk add --no-cache libc6-compat
-COPY package.json yarn.lock* package-lock.json* ./
-RUN yarn install
+WORKDIR /app
+
+# Install dependencies
+COPY package.json ./
+RUN yarn
+
+
+# Rebuild the source code only when needed
+FROM node:16-alpine AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN yarn build
+
+ENV NEXT_TELEMETRY_DISABLED 1
+
+RUN NEXT_PUBLIC_SERVER_URL=APP_NEXT_PUBLIC_SERVER_URL yarn build
 
 # Production image
-FROM nginx:1.23-alpine AS prod
+FROM node:16-alpine AS runner
 WORKDIR /app
-ENV NODE_ENV production
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nginx/html
+ENV NODE_ENV production
+ENV NEXT_TELEMETRY_DISABLED 1
+
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+COPY --from=builder /app/next.config.js ./
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/entrypoint.sh ./entrypoint.sh
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+USER nextjs
 
 EXPOSE 80
 ENV PORT 80
-CMD [ "nginx", "-g", "daemon off;" ]
+
+ENTRYPOINT ["/app/entrypoint.sh"]
+
+CMD ["node", "server.js"]
