--- a/okteto.yml
+++ b/okteto.yml
@@ -44,17 +44,48 @@ deploy:
 # More info: https://www.okteto.com/docs/reference/manifest/#dependencies
 # dependencies:
 #   - https://github.com/okteto/sample
+
+
 # The dev section defines how to activate a development container
 # More info: https://www.okteto.com/docs/reference/manifest/#dev
-# dev:
-#   sample:
-#     image: okteto/dev:latest
-#     command: bash
-#     workdir: /usr/src/app
-#     sync:
-#       - .:/usr/src/app
-#     environment:
-#       - name=$USER
-#     forward:
-#       - 8080:80
+dev:
+  app:
+    image: hxyro/modifier-app
+    command: bash
+    workdir: /app
+    securityContext:
+      runAsUser: 1001
+    sync:
+      - .:/app
+    forward:
+      - 9229:9229
+      - 3000:3000
+  mongodb:
+    command: bash
+    workdir: /usr/src/app
+    sync:
+      - .:/usr/src/app
+    forward:
+      - 9229:9229
+      - 27017:27017
+  nginx-proxy:
+    image: hxyro/modifier-nginx-proxy
+    command: bash
+    workdir: /usr/src/app
+    sync:
+      - .:/usr/src/app
+    forward:
+      - 9229:9229
+      - 8080:80
+  server:
+    image: hxyro/modifier-server
+    command: bash
+    workdir: /app
+    securityContext:
+      runAsUser: 1001
+    sync:
+      - .:/app
+    forward:
+      - 9229:9229
+      - 5000:5000
 
