--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@modifier/server",
+  "name": "@modifier/app",
   "description": "Next Generation Url Modifier",
   "repository": "https://github.com/ulmodifier/modifier",
   "version": "0.1.0",
@@ -14,12 +14,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "reactstrap": "^9.1.1",
+    "nanoid": "^4.0.0",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
+    "reactstrap": "^9.1.1",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "eslint": "8.21.0",
