--- a/k8s-manifest/ingress.yaml
+++ b/k8s-manifest/ingress.yaml
@@ -3,22 +3,34 @@ kind: Ingress
 metadata:
   name: modifer
   namespace: default
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /s3url
 spec:
   ingressClassName: nginx
   rules:
   - host:
     http:
       paths:
-      - path: /app(/|$)(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: app-service
             port:
               number: 80
-      - path: /server(/|$)(.*)
+      - path: /u/a/m
+        pathType: Prefix
+        backend:
+          service:
+            name: server-service
+            port:
+              number: 80
+      - path: /a
+        pathType: Prefix
+        backend:
+          service:
+            name: server-service
+            port:
+              number: 80
+      - path: /alter
         pathType: Prefix
         backend:
           service:
